# nps_lab

./: .dockerignore  .gitignore  Dockerfile  NetSentinel_Improvements.md  NetSentinel_LabManual.md  NetSentinel_PRD.md  README.md  docker-compose.test.yml  docker-compose.yml  lab.md  ppt_prompt.md  prompt.md  pull_setup.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_instructions.md  setup.py  setup_instructions.md
.github/: PROJECT_SETUP.md  copilot-instructions.md
docs/: TESTING.md
netsentinel/: __init__.py  cli.py  config.py  sbom.py  scoring.py  static_analyzer.py
netsentinel/dashboard/: __init__.py  dashboard.html  gemini_client.py  landing.html  pdf_generator.py  server.py
netsentinel/models/: __init__.py  finding.py  manifest.py  scan_config.py  scan_result.py
netsentinel/probes/: __init__.py  dns_probe.py  engine.py  http_probe.py  network.py  tls_probe.py
test-caddy/: Caddyfile
test-caddy/www/: index.html
tests/: __init__.py  manual_test.py  test_integration.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_cli_commands.py  test_full_scan_workflow.py  test_probe_orchestration.py  test_static_analyzer_real_repos.py
tests/unit/: __init__.py  test_http_probe.py  test_network_probe.py  test_sbom.py  test_scoring.py  test_static_analyzer.py
